--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "angular-feather": "^6.0.2",
+    "markdown-it": "^10.0.0",
+    "markdown-pdf": "^10.0.0",
     "rxjs": "~6.4.0",
     "skeleton-css": "^2.0.4",
     "tslib": "^1.9.0",
